Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80910

Drawer item does not support rotation

XMLWordPrintable

    • Linux/X11, Linux/Other display system
    • 79474b087 (dev), d8a4fda90 (6.6), d0fcada55 (dev), c61525f3a (dev), a4a5d63fa (6.7), 61fa31707 (6.6)

      If you rotate the overlay 180 degrees the Drawer and it's contents are rotated, but the Drawer opens up from the opposite edge than it appears ie. the rotation does not affect the edge from where the drawer is dragged from.

       

        1. qtbug_80910.zip
          2 kB
          Tuomas Vaarala
        2. 1591404.diff
          5 kB
          Andy Shaw
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: