src/quicktemplates/qquickdrawer.cpp
@@ -165,15 +165,25 @@ qreal QQuickDrawerPrivate::positionAt(const QPointF &point) const
     if (!window)
         return 0;
 
-    switch (edge) {
+    auto size = QSizeF(q->width(), q->height());
+
+    switch (effectiveEdge()) {
     case Qt::TopEdge:
-        return point.y() / q->height();
+        if (edge == Qt::LeftEdge || edge == Qt::RightEdge)
+            size.transpose();
+        return point.y() / size.height();
     case Qt::LeftEdge:
-        return point.x() / q->width();
+        if (edge == Qt::TopEdge || edge == Qt::BottomEdge)
+            size.transpose();
+        return point.x() / size.width();
     case Qt::RightEdge:
-        return (window->width() - point.x()) / q->width();
+        if (edge == Qt::TopEdge || edge == Qt::BottomEdge)
+            size.transpose();
+        return (window->width() - point.x()) / size.width();
     case Qt::BottomEdge:
-        return (window->height() - point.y()) / q->height();
+        if (edge == Qt::LeftEdge || edge == Qt::RightEdge)
+            size.transpose();
+        return (window->height() - point.y()) / size.height();
     default:
         return 0;
     }
@@ -248,17 +258,18 @@ void QQuickDrawerPrivate::resizeDimmer()
     dimmer->setSize(geometry.size());
 }
 
-static bool isWithinDragMargin(const QQuickDrawer *drawer, const QPointF &pos)
+bool QQuickDrawerPrivate::isWithinDragMargin(const QPointF &pos) const
 {
-    switch (drawer->edge()) {
+    Q_Q(const QQuickDrawer);
+    switch (effectiveEdge()) {
     case Qt::LeftEdge:
-        return pos.x() <= drawer->dragMargin();
+        return pos.x() <= q->dragMargin();
     case Qt::RightEdge:
-        return pos.x() >= drawer->window()->width() - drawer->dragMargin();
+        return pos.x() >= q->window()->width() - q->dragMargin();
     case Qt::TopEdge:
-        return pos.y() <= drawer->dragMargin();
+        return pos.y() <= q->dragMargin();
     case Qt::BottomEdge:
-        return pos.y() >= drawer->window()->height() - drawer->dragMargin();
+        return pos.y() >= q->window()->height() - q->dragMargin();
     default:
         Q_UNREACHABLE();
         break;
@@ -268,14 +279,13 @@ static bool isWithinDragMargin(const QQuickDrawer *drawer, const QPointF &pos)
 
 bool QQuickDrawerPrivate::startDrag(QEvent *event)
 {
-    Q_Q(QQuickDrawer);
     delayedEnterTransition = false;
     if (!window || !interactive || dragMargin < 0.0 || qFuzzyIsNull(dragMargin))
         return false;
 
     switch (event->type()) {
     case QEvent::MouseButtonPress:
-        if (QMouseEvent *mouseEvent = static_cast<QMouseEvent *>(event); isWithinDragMargin(q, mouseEvent->scenePosition())) {
+        if (QMouseEvent *mouseEvent = static_cast<QMouseEvent *>(event); isWithinDragMargin(mouseEvent->scenePosition())) {
             // watch future events and grab the mouse once it has moved
             // sufficiently fast or far (in grabMouse).
             delayedEnterTransition = true;
@@ -290,7 +300,7 @@ bool QQuickDrawerPrivate::startDrag(QEvent *event)
     case QEvent::TouchUpdate: {
         auto *touchEvent = static_cast<QTouchEvent *>(event);
         for (const QTouchEvent::TouchPoint &point : touchEvent->points()) {
-            if (point.state() == QEventPoint::Pressed && isWithinDragMargin(q, point.scenePosition())) {
+            if (point.state() == QEventPoint::Pressed && isWithinDragMargin(point.scenePosition())) {
                 delayedEnterTransition = true;
                 touchEvent->addPassiveGrabber(point, popupItem);
                 handleTouchEvent(window->contentItem(), touchEvent);
@@ -328,10 +338,11 @@ bool QQuickDrawerPrivate::grabMouse(QQuickItem *item, QMouseEvent *event)
     // larger threshold to avoid being too eager to steal touch (QTBUG-50045)
     const int threshold = qMax(20, QGuiApplication::styleHints()->startDragDistance() + 5);
     bool overThreshold = false;
+    Qt::Edge effEdge = effectiveEdge();
     if (position > 0 || dragMargin > 0) {
         const bool xOverThreshold = QQuickWindowPrivate::dragOverThreshold(movePoint.x() - pressPoint.x(), Qt::XAxis, event, threshold);
         const bool yOverThreshold = QQuickWindowPrivate::dragOverThreshold(movePoint.y() - pressPoint.y(), Qt::YAxis, event, threshold);
-        if (edge == Qt::LeftEdge || edge == Qt::RightEdge)
+        if (effEdge == Qt::LeftEdge || effEdge == Qt::RightEdge)
             overThreshold = xOverThreshold && !yOverThreshold;
         else
             overThreshold = yOverThreshold && !xOverThreshold;
@@ -339,7 +350,7 @@ bool QQuickDrawerPrivate::grabMouse(QQuickItem *item, QMouseEvent *event)
 
     // Don't be too eager to steal presses outside the drawer (QTBUG-53929)
     if (overThreshold && qFuzzyCompare(position, qreal(1.0)) && !contains(movePoint)) {
-        if (edge == Qt::LeftEdge || edge == Qt::RightEdge)
+        if (effEdge == Qt::LeftEdge || effEdge == Qt::RightEdge)
             overThreshold = qAbs(movePoint.x() - q->width()) < dragMargin;
         else
             overThreshold = qAbs(movePoint.y() - q->height()) < dragMargin;
@@ -424,8 +435,6 @@ static const qreal openCloseVelocityThreshold = 300;
 // interactive control.
 bool QQuickDrawerPrivate::blockInput(QQuickItem *item, const QPointF &point) const
 {
-    Q_Q(const QQuickDrawer);
-
     // We want all events, if mouse/touch is already grabbed.
     if (popupItem->keepMouseGrab() || popupItem->keepTouchGrab())
         return true;
@@ -439,7 +448,7 @@ bool QQuickDrawerPrivate::blockInput(QQuickItem *item, const QPointF &point) con
         return false;
 
     // Accept all events within drag area.
-    if (isWithinDragMargin(q, point))
+    if (isWithinDragMargin(point))
         return true;
 
     // Accept all other events if drawer is modal.
@@ -490,9 +499,9 @@ bool QQuickDrawerPrivate::handleRelease(QQuickItem *item, const QPointF &point, 
     }
 
     velocityCalculator.stopMeasuring(point, timestamp);
-
+    Qt::Edge effEdge = effectiveEdge();
     qreal velocity = 0;
-    if (edge == Qt::LeftEdge || edge == Qt::RightEdge)
+    if (effEdge == Qt::LeftEdge || effEdge == Qt::RightEdge)
         velocity = velocityCalculator.velocity().x();
     else
         velocity = velocityCalculator.velocity().y();
@@ -505,7 +514,7 @@ bool QQuickDrawerPrivate::handleRelease(QQuickItem *item, const QPointF &point, 
     // - bottom/right edge: negative velocity opens, positive velocity closes
     //
     // => invert the velocity for bottom and right edges, for the threshold comparison below
-    if (edge == Qt::RightEdge || edge == Qt::BottomEdge)
+    if (effEdge == Qt::RightEdge || effEdge == Qt::BottomEdge)
         velocity = -velocity;
 
     if (position > 0.7 || velocity > openCloseVelocityThreshold) {
@@ -513,7 +522,7 @@ bool QQuickDrawerPrivate::handleRelease(QQuickItem *item, const QPointF &point, 
     } else if (position < 0.3 || velocity < -openCloseVelocityThreshold) {
         transitionManager.transitionExit();
     } else {
-        switch (edge) {
+        switch (effEdge) {
         case Qt::LeftEdge:
             if (point.x() - pressPoint.x() > 0)
                 transitionManager.transitionEnter();
@@ -642,6 +651,31 @@ Qt::Edge QQuickDrawer::edge() const
 {
     Q_D(const QQuickDrawer);
     return d->edge;
+}
+
+Qt::Edge QQuickDrawerPrivate::effectiveEdge() const
+{
+    auto realEdge = edge;
+    qreal rotation = window->contentItem()->rotation();
+    const bool clockwise = rotation > 0;
+    while (qAbs(rotation) >= 90) {
+        rotation -= clockwise ? 90 : -90;
+        switch (realEdge) {
+        case Qt::LeftEdge:
+            realEdge = clockwise ? Qt::TopEdge : Qt::BottomEdge;
+            break;
+        case Qt::TopEdge:
+            realEdge = clockwise ? Qt::RightEdge : Qt::LeftEdge;
+            break;
+        case Qt::RightEdge:
+            realEdge = clockwise ? Qt::BottomEdge : Qt::TopEdge;
+            break;
+        case Qt::BottomEdge:
+            realEdge = clockwise ? Qt::LeftEdge : Qt::RightEdge;
+            break;
+        }
+    }
+    return realEdge;
 }
 
 void QQuickDrawer::setEdge(Qt::Edge edge)
